Fix releases and callings section styling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -35,8 +35,7 @@
   .col-sm-7 {
     width: 58.333333333333336%;
   }
-  .col-sm-6,
-  .col-md-6 {
+  .col-sm-6 {
     width: 50%;
   }
   .col-sm-5 {
